--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -41,13 +41,13 @@
   flex-direction: column;
   height: 100%;
   overflow-y: scroll;
-  padding-right: 15px;
-  margin-right: -15px;
+  // padding-right: 15px;
+  // margin-right: -15px;
 }
 
-#message-block::-webkit-scrollbar {
-  display: none;
-}
+// #message-block::-webkit-scrollbar {
+//   display: none;
+// }
 
 .sent-message,
 .delivered-message {
